--- a/Develop/index.html
+++ b/Develop/index.html
@@ -3,27 +3,30 @@
 
 <head>
     <meta charset="UTF-8" />
+    <title>Horiseon</title>
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>website</title>
 </head>
 
 <body>
-    <div class="header">
-        <h1>Hori<span class="seo">seo</span>n</h1>
-        <div>
-            <ul>
-                <li>
-                    <a href="#search-engine-optimization">Search Engine Optimization</a>
-                </li>
-                <li>
-                    <a href="#online-reputation-management">Online Reputation Management</a>
-                </li>
-                <li>
+    <header>
+        <h1>
+            <a href="/">Horiseon</a> 
+        </h1>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="#search-engine-optimization">Search Engine Optimization</a>
+                    </li>
+                    <li>
+                        <a href="#online-reputation-management">Online Reputation Management</a>
+                    </li>
+                    <li>
                     <a href="#social-media-marketing">Social Media Marketing</a>
-                </li>
-            </ul>
-        </div>
-    </div>
+                    </li>
+                </ul>
+            </nav>
+    </header>
+    
     <div class="hero"></div>
     <div class="content">
         <div class="search-engine-optimization">
